--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,3 +11,64 @@
             margin: 0;
             padding: 0;
         }
+
+        header {
+            background-color: #333;
+            color: beige;
+            padding: 1em;
+            text-align: center;
+        }
+
+        section {
+            padding: 20px;
+            max-width: 600px;
+            margin: auto;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        p {
+            font-size: 24px; /* Adjust the size as needed */
+        }
+
+        a.login-link {
+            display: inline-block;
+            padding: 10px 20px; /* Adjust padding as needed */
+            text-decoration: none;
+            border: 2px solid #007BFF; /* Border color */
+            border-radius: 5px; /* Border radius for rounded corners */
+            background-color: #007BFF; /* Background color */
+            color: #fff; /* Text color */
+            font-size: 16px; /* Adjust font size as needed */
+        }
+
+        div.center {
+            text-align: center;
+            margin-top: 15vh; /* Adjust as needed to center vertically */
+        }
+    </style>
+</head>
+<body>
+
+        <header>
+                <h1> Note Application</h1>
+        </header>
+                <div class="center">
+                 <p>Welcome to the Note Application</p>
+                 <a href="{{ url_for('login') }}" class="login-link">Login</a>
+                 <a href="{{ url_for('register') }}" class="login-link">Sign Up$
+                </div>
+
+</body>
+</html>
+
+
+
