--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,6 +56,7 @@
                 <form action="/delete_note/{{ note.id }}" method="post">
                     <button type="submit">Delete</button>
                 </form>
+                <a href="{{ url_for('edit_note', note_id=note.id) }}">Edit</a>
             </div>
         {% endfor %}
     </div>
