--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -64,7 +64,7 @@
                 <div class="center">
                  <p>Welcome to the Note Application</p>
                  <a href="{{ url_for('login') }}" class="login-link">Login</a>
-                 <a href="{{ url_for('register') }}" class="login-link">Sign Up
+                 <a href="{{ url_for('register') }}" class="login-link">Sign Up</a>
                 </div>
 
 </body>
