--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -71,13 +71,17 @@
 
 
                <!-- Link to view note details, including comments -->
-               <a href="{{ url_for('show_note', note_id=note.id) }}">View Details</a>
-
+               <a href="{{ url_for('show_note', note_id=note.id) }}">
+                   <button type="submit">View Details</button>
+               </a>
 
                <form action="/delete_note/{{ note.id }}" method="post">
                    <button type="submit">Delete</button>
                </form>
-               <a href="{{ url_for('edit_note', note_id=note.id) }}">Edit</a>
+
+               <form action="/edit_note/{{ note.id }}" method="post">
+                   <button type="submit">Edit</button>
+               </form>
            </div>
        {% endfor %}
    </div>
