--- a/app/templates/note.html
+++ b/app/templates/note.html
@@ -19,10 +19,10 @@
         </ul>
 
         <!-- Form to add a new comment -->
-        <form method="post">
+        <form method="post" action="{{ url_for('show_detail', note_id=note.id) }}">
             {% if comment_form is defined %}
                 {{ comment_form.csrf_token }}
-                {{ comment_form.text.label }}
+                {{ comment_form.text.label }}    
                 {{ comment_form.text(size=20) }}
                 {{ comment_form.submit }}
             {% else %}
