--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -83,7 +83,7 @@
                 </ul>
 
                <!-- Link to view note details, including comments -->
-               <a href="{{ url_for('show_note', note_id=note.id) }}" class="button-form">
+               <a href="{{ url_for('show_detail', note_id=note.id) }}" class="button-form">
                    <button type="submit">View Details</button>
                </a>
 
