--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,7 @@
             <a href="/">Home</a>
             <a href="/login">Login</a>
             <a href="/logout">LogOut</a>
+            <a href="/index">DashBoard</a>
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
