--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -94,6 +94,10 @@
                <form action="/edit_note/{{ note.id }}" method="post" class="button-form">
                    <button type="submit">Edit</button>
                </form>
+
+               <form action="/ReTitle_note/{{ note.id }}" method="post" class="button-form">
+                   <button type="submit">ReName</button>
+               </form>
            </div>
        {% endfor %}
    </div>
