Updated Search function to include back button

--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -13,6 +13,7 @@
             <li>{{ note.title }} - {{ note.content }}</li>
         {% endfor %}
     </ul>
+<a href="{{ previous_page }}">Back</a>
 </body>
 </html>
 
