Finished reset password in the account.

--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -1,30 +1,21 @@
+<!-- Extends the 'base.html' file and Imports the 'bootstrap/wtf.html' module as 'wtf' -->
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
+<!--Defines 1 block named app_content to put into the parent file 'base.html' -->
 {% block content %}
-<div class="container">
-    <div class="inner-container">
-        <h2>Reset Password</h2>
-        <form action="" method="post" novalidate>
-            {{ form.hidden_tag() }}
-            <div class="form-group">
-                {{ form.password.label }}<br>
-                {{ form.password(size=32) }}
-                {% for error in form.password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
-            </div>
-            <div class="form-group">
-                {{ form.confirm_password.label }}<br>
-                {{ form.confirm_password(size=32) }}
-                {% for error in form.confirm_password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
-            </div>
-            <div class="form-group">
-                {{ form.submit() }}
-            </div>
-        </form>
-        <p>Remember your password? <a href="{{ url_for('login') }}">Log in</a></p>
+  <!-- Creates a row for the page content -->
+  <div class="row">
+    <div class="col-md-4 offset-md-4 col-xs-8 offset-xs-2">
+      <h1 class="text-center">Reset Password</h1>
     </div>
-</div>
+  </div>
+
+  <!-- Creates another row for the page content -->
+  <div class="row">
+    <div class="col-md-4 offset-md-4 col-xs-8 offset-xs-2">
+      <!-- Quick form generated using the 'wtf.quick_form' function and the 'form' variable -->
+      {{ wtf.quick_form(form) }}
+    </div>
+  </div>
 {% endblock %}
