--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -10,7 +10,15 @@
     <h1>Search Results for "{{ query }}"</h1>
     <ul>
         {% for note in notes %}
-            <li>{{ note.title }} - {{ note.content }}</li>
+            <li>
+                <strong>{{ note.title }}</strong><br>
+                {{ note.content }}<br>
+                <a href="{{ url_for('show_detail', note_id=note.id) }}">View</a>
+                <a href="{{ url_for('edit_note', note_id=note.id) }}">Edit</a>
+                <form action="{{ url_for('delete_note', id=note.id) }}" method="post" style="display: inline;">
+                    <button type="submit">Delete</button>
+                </form>
+            </li>
         {% endfor %}
     </ul>
 <a href="{{ previous_page }}">Back</a>
