--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -13,14 +13,21 @@
             <li>
                 <strong>{{ note.title }}</strong><br>
                 {{ note.content }}<br>
-                <a href="{{ url_for('show_detail', note_id=note.id) }}">View</a>
-                <a href="{{ url_for('edit_note', note_id=note.id) }}">Edit</a>
+
+                <a href="{{ url_for('show_detail', note_id=note.id) }}" class="button-form">
+                   <button type="submit">View Details</button>
+                <a>
+
+                <a href="{{ url_for('edit_note', note_id=note.id) }}" class="button-form">
+                   <button type="submit">Edit</button>
+                <a>
+
                 <form action="{{ url_for('delete_note', id=note.id) }}" method="post" style="display: inline;">
                     <button type="submit">Delete</button>
                 </form>
             </li>
         {% endfor %}
     </ul>
-<a href="{{ previous_page }}">Back</a>
 </body>
+<a href="{{ previous_page }}">Back</a>
 </html>
