Changed formatting of buttons for search

--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -29,5 +29,7 @@
         {% endfor %}
     </ul>
 </body>
-<a href="{{ previous_page }}">Back</a>
+<a href="{{ previous_page }}">
+<button type="submit">Back</button>
+<a>
 </html>
