--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -81,7 +81,7 @@
 <div class="container">
   <div class="inner-container">
     <h2>Create Note</h2>
-    <form method="POST" action="{{ url_for('create_note') }}">
+    <form method="post" action="{{ url_for('create_note') }}" enctype="multipart/form-data">
       {{ form.hidden_tag() }}
 
       <div class="form-group">
